--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     align-items: center;
     justify-content: center;
     height: calc(100vh - 1rem);
-    background-color: black;
+    background-color: #d4fcf7;
     width: calc(100vw - 1rem);
     padding: 1rem;
     font-family: 'Poppins', sans-serif;
